# sdk_test

./: .travis.yml  README.md  crad.py  run_test_python_sdk.py  scenario_run.py  test_scenarios.py
.github/: pull_request_template.md
data/: conrad-sdk.db
scenarios/: scenario_run.py  test_scenarios.py
scenarios/BasicUseCase/: basic_use_case.py  file.csv  test_basic_use_case.py
scenarios/GetSearchLE/: expected_output.json  file.csv  get_search_le.py  test_get_search_le.py
scenarios/csv-scenarios/: get_search_le.csv  use-case-0-device-registration.csv  use-case-1-ip-vs-registered-data-matching.csv  use-case-2-matched-ip-stations-have-live-data.csv
scenarios/csv_scenarios/: basic_use_case.csv  get_search_le.csv
scenarios/excepted_data/: expected_basic_use_case.json  expected_get_search_le.json
scenarios/expected-data/: expected_get_search_le.json  use-case-0-device-registration.json  use-case-0-new.json  use-case-1-ip-vs-registered-data-matching.json  use-case-2-matched-ip-stations-have-live-data.json
sdk-python/: CMakeLists.txt  build.sh  crad_api_python.h  crad_callback_data.h  crad_callback_data_python.h  crad_data_python.h  crad_delegate_impl.cpp  crad_delegate_impl.h  crad_delegate_impl_python.h  crad_delegate_python.h  cradpy.cpp
sdk-python/build_X86_64/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
sdk_python/: python_functions.py
